--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,6 +14,7 @@ platforms:
   - name: windows-8
     driver:
       box: roboticcheese/windows-8
+  - name: ubuntu-14.04
 
 suites:
   - name: default
